# fungame_auto_data_fetcher

./: .appwrite  appwrite.json  auth.py  automator.py  index.py  main.py  pyproject.toml  requirements.txt
